# bravo-py

./: .gitignore  1.1_96-well_Lid_backup.json  LICENSE  README.md  labware_registry_export_20250813_221333.json  labware_registry_export_20250813_221333.txt  plr_visualizer.py  pyproject.toml
.github/workflows/: publish.yml
examples/: simple_transfer.py  state_machine.py
src/pybravo/: __init__.py  core.py  exceptions.py  export_labware.py  labware_manager.py  state.py  utils.py  visualizer_enhanced.py
src/pybravo/deck_visualizer/: index.html  script.js  styles.css  visualizer_server.py
tests/: conftest.py  test_core.py
